--- a/public/less/deskstop.less
+++ b/public/less/deskstop.less
@@ -633,6 +633,16 @@ body {
     color: @real-red;
     font-size: 12px;
   }
+  .errorMsgInvalid
+  {
+    position: relative;
+    bottom:0;
+  }
+  .form-message
+  {
+    margin-top: 10px;
+    color: @brand-primary;
+  }
 }
 
 .modal-backdrop.in
